# patch-guard

./: CLAUDE.md  Dockerfile.vulnerable  TESTING_GUIDE.md  requirements_vulnerable.txt  sample_mend_scan.json  sample_sonarqube_scan.json  sample_trivy_scan.json  sample_vulnerable_app.py
PatchGuard/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
PatchGuard/docs/: CLI_USAGE.md  FILE_MANIFEST.md  FINAL_SESSION_REPORT.txt  IMPLEMENTATION_COMPLETE.md  PHASE_6_COMPLETE.md  PHASE_6_RISK_CLASSIFIER_PLAN.md  PHASE_6_STATUS_REPORT.txt  PHASE_7_COMPLETE.md  PHASE_7_CONTEXT_RETRIEVER_PLAN.md  PHASE_7_STATUS_REPORT.txt  PHASE_8_COMPLETION.md  PHASE_8_LLM_FIX_GENERATOR_PLAN.md  PHASE_8_PROGRESS_SUMMARY.md  PHASE_9_QUICKSTART.md  PROGRESS.md  PROJECT_SUMMARY.md  PatchGuard_Project_Summary.md  PatchGuard_Task_Breakdown.md  SESSION_COMPLETION_REPORT.md  SESSION_COMPLETION_REPORT_2026_03_23.md  SESSION_SUMMARY.md  VERIFICATION_CHECKLIST.md
PatchGuard/helm/patchguard/: Chart.yaml  values.yaml
PatchGuard/patchguard/: __main__.py  cli.py
PatchGuard/patchguard/agents/: feedback_monitor.py
PatchGuard/patchguard/audit/: events.py  logger.py
PatchGuard/patchguard/classifiers/: risk_classifier.py
PatchGuard/patchguard/config/: risk_policy.py
PatchGuard/patchguard/generators/: diff_parser.py  fix_generator.py  llm_client.py  prompt_builder.py
PatchGuard/patchguard/github/: __init__.py  client.py
PatchGuard/patchguard/models/: code_context.py  finding.py  fix_result.py
PatchGuard/tests/: conftest.py
docs/: 00_README.md  (+18 more)
(+72 files in other folders)
